theory pretty much finished with MLP, overfitting, definitions, polyreg, training/validation, ER

--- a/sections/00_title-page.tex
+++ b/sections/00_title-page.tex
@@ -1,11 +1,11 @@
 
 \begin{titlepage}
 
-        \raisebox{-0.5\height}{\includegraphics[height=4cm]{rolls_royce}}
-        \hfill \raisebox{-0.5\height}{\includegraphics[height=3cm]{tu-logo}}
-
+        % \raisebox{-0.5\height}{\includegraphics[height=3cm]{rolls_royce}}
         \centering
-        \vspace{1.5cm}
+        {\includegraphics[height=2.75cm]{tu-logo}}
+
+        \vspace{2.5cm}
         {\Large \textbf{Machine Learning of Engine Health Monitoring Data: Development of a machine learning model for damage prediction of real flight missions}\par}
         \vspace{1cm}
         {\scshape\Large Technische Universit\"at Berlin \par}
