--- a/sections/abbrv.tex
+++ b/sections/abbrv.tex
@@ -120,13 +120,43 @@
 
 \DeclareAcronym{tsc}{
 	short	=	TSC,
-	long	=	time series classification,
+	long	=	Time series classification,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{mts}{
+	short	=	MTS,
+	long	=	multivariate time series,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{mlp}{
+	short	=	MLP,
+	long	=	multilayer perceptron,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{cnn}{
+	short	=	CNN,
+	long	=	convolutional neural network,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{relu}{
+	short	=	ReLU,
+	long	=	Rectified Linear Unit,
 	class	=	Machine learning
 }
 
 \DeclareAcronym{csv}{
 	short	= 	CSV,
 	long 	= 	comma-separated values,
+	class 	= 	Other
+}
+
+\DeclareAcronym{kde}{
+	short	= 	KDE,
+	long 	= 	Kernel density estimation,
 	class 	= 	Other
 }
 
