--- a/sections/02_intro.tex
+++ b/sections/02_intro.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
-In recent years, many industries have experienced enormous changes due to an influx of huge quantities of data, increasingly cheap data storage solutions and access to high computational power \cite{chen_big_2014}. The aviation industry is no exception: the Airbus A350 XWB comes equipped with approximately \numprint{6000} sensors that produce 300 GB of data every day; the next generation Airbus A380 will come with \numprint{10000} sensors on a single wing alone \cite[]{rajaraman_big_2016}.
+In recent years, many industries have experienced enormous changes due to an influx of huge quantities of data, increasingly affordable data storage solutions and access to high computational power \cite[]{chen_big_2014}. The aviation industry is no exception: the Airbus A350 XWB comes equipped with approximately \numprint{6000} sensors that produce 300 GB of data every day; the next generation Airbus A380 will come with \numprint{10000} sensors on a single wing alone \cite[]{rajaraman_big_2016}.
 
 This data can only be of value if there are suitable tools for handling it. The arrival of the age of Big Data \cite[]{fan_mining_2013} coincided unsurprisingly with an increase in the popularity of \ac{ai} and \ac{ml}. Today, highly optimised, specially designed programming libraries make data-orientated \ac{ml} approaches more accessible and more powerful than ever.
 
-Customers using aircraft powered by Rolls-Royce engines can return \ac{ehm} data to Rolls-Royce on a voluntary basis. This data is recorded during flights and includes parameters such as temperature and pressure at various stages of the engine, flight altitude and speed, and many others.
+Operators using aircraft powered by engines made by Rolls-Royce can return \ac{ehm} data to the company on a voluntary basis. This data is recorded during flights and includes parameters such as temperature and pressure at various stages of the engine, flight altitude and speed, and many others.
 
-The company uses this data for various analyses, such as determining the amount of service life consumed during the flight mission. Currently, the process involves hand-selecting individual points of interest, or features, and performing a semi-automated fatigue analysis on each of these individually, from which the consumed service life is determined. This method has been sufficient in the past due to its robustness and speed for a limited number of features, but is unfeasible for future applications that require output values for the entire surface of a component.
+Rolls-Royce uses this data for various analyses, such as determining the amount of service life consumed during the flight mission. Currently, the process involves hand-selecting individual points of interest (features) of a component, and performing a semi-automated fatigue analysis on each of these individually, from which the consumed service life is determined. This method has been sufficient in the past due to its robustness and efficiency for a small number of features, but is limited by the difficulties and time involved in selecting features a priori.
 
-It is in the interest of Rolls-Royce to improve the speed, accuracy and comprehensiveness of \ac{ehm} data analysis to gain an overview of the performance and remaining service life of in-service engines. This thesis, written in cooperation with Rolls-Royce Deutschland, aims to identify and evaluate a number of \ac{ml}-based methods for achieving these goals.
+This thesis, written in cooperation with Rolls-Royce Deutschland, aims to identify, evaluate and compare a number of \ac{ml}-based methods that avoid this manual input stage by producing an output for \textit{all} component surface nodes with comparable accuracy and speed to the current method.
 
-The thesis is structured as follows: First, the theory behind the methods will be covered with a more in-depth look at subfields of deep learning that will be of interest. Then, an overview of the input data will be presented. After this, the methods identified will be implemented and evaluated in the practical section, and subsequentlty compared in the discussion. Finally, in the conclusion, suggestions will be made for further research into the topic.
+The thesis is structured as follows: First, the theoretical background will be covered alongside an introduction to subfields of \ac{ml} and \ac{dl} and state-of-the-art methods of interest for the research. Then, an overview of the input data will be presented. After this, the methods identified will be implemented and their results presented in the practical section, with a subsequent evaluation and comparison in the discussion. Finally, in the conclusion, suggestions will be made for further research into the topic.
